3-subnets.tf
#3-subnets.tf

# https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_subnetwork
resource "google_compute_subnetwork" "private" {
  name                     = "private"
  ip_cidr_range            = "10.0.0.0/18"
  region                   = "us-central1"
  network                  = google_compute_network.cwglobal.id
  private_ip_google_access = true

  secondary_ip_range {
    range_name    = "cwsubnet-1"
    ip_cidr_range = "10.48.0.0/14"
  }

   secondary_ip_range {
    range_name    = "cwsubnet-2"
    ip_cidr_range = "10.52.0.0/20"
  }
}
